--- a/letras.html
+++ b/letras.html
@@ -10,8 +10,11 @@
 </head>
 <body>
   <div class="container mt-4">
-    <h1 class="text-center">Corario 1NL</h1>
-    <div class="row my-4">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <h1 class="mb-0">Corario 1NL</h1>
+      <a href="agregar.html" class="btn btn-success">+ Agregar Canción</a>
+    </div>
+    <div class="row mb-4">
       <div class="col-md-8">
         <input type="text" id="buscador" class="form-control" placeholder="Buscar por título o letra...">
       </div>
