--- a/letras.html
+++ b/letras.html
@@ -11,7 +11,10 @@
 <body>
   <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
-      <h1 class="mb-0">Corario 1NL</h1>
+      <div class="d-flex align-items-center">
+        <video src="assets/videos/1NL.mp4" autoplay muted loop width="50" height="50" style="margin-right:10px; border-radius: 10px;"></video>
+        <h1 class="mb-0">Corario 1NL</h1>
+      </div>
       <a href="agregar.html" class="btn btn-success">+ Agregar Canción</a>
     </div>
     <div class="row mb-4">
