--- a/letras.html
+++ b/letras.html
@@ -8,23 +8,23 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body>
-  <div class="container mt-4">
-    <div class="d-flex justify-content-between align-items-center mb-3">
-      <div class="d-flex align-items-center">
-        <video src="assets/videos/1NL.mp4" autoplay muted loop width="50" height="50" style="margin-right:10px; border-radius: 10px;"></video>
-        <h1 class="mb-0">Corario 1NL</h1>
-      </div>
-      <a href="agregar.html" class="btn btn-success">+ Agregar Canción</a>
+<body class="bg-black text-white">
+  <div class="container mt-3">
+    <div class="text-center mb-3">
+      <video src="assets/videos/1NL.mp4" autoplay muted loop width="100" height="100" style="border-radius: 20px;"></video>
     </div>
-    <div class="row mb-4">
-      <div class="col-md-8">
-        <input type="text" id="buscador" class="form-control" placeholder="Buscar por título o letra...">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2 class="text-white">Corario 1NL</h2>
+      <a href="agregar.html" class="btn btn-outline-light rounded-pill px-4">+ Agregar Canción</a>
+    </div>
+    <div class="row mb-3">
+      <div class="col-md-8 mb-2">
+        <input type="text" id="buscador" class="form-control bg-dark text-white border-light" placeholder="Buscar por título o letra...">
       </div>
       <div class="col-md-4 text-end">
         <div class="form-check form-switch">
           <input class="form-check-input" type="checkbox" id="filtroFavoritas">
-          <label class="form-check-label" for="filtroFavoritas">Solo favoritas</label>
+          <label class="form-check-label text-white" for="filtroFavoritas">Solo favoritas</label>
         </div>
       </div>
     </div>
