--- a/index.html
+++ b/index.html
@@ -30,5 +30,32 @@
       window.location.href = "letras.html";
     };
   </script>
+
+<script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("service-worker.js")
+      .then(() => console.log("Service Worker registrado"));
+  }
+
+  let deferredPrompt;
+  window.addEventListener('beforeinstallprompt', (e) => {
+    e.preventDefault();
+    deferredPrompt = e;
+    const btn = document.createElement("button");
+    btn.innerText = "📲 Instalar App";
+    btn.className = "btn btn-outline-light position-fixed bottom-0 end-0 m-4";
+    btn.style.zIndex = "9999";
+    document.body.appendChild(btn);
+    btn.addEventListener("click", () => {
+      deferredPrompt.prompt();
+      deferredPrompt.userChoice.then(choice => {
+        if (choice.outcome === "accepted") {
+          btn.remove();
+        }
+      });
+    });
+  });
+</script>
 </body>
+
 </html>
