--- a/agregar.html
+++ b/agregar.html
@@ -7,37 +7,40 @@
   <title>Agregar Canción - Corario 1NL</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
 </head>
-<body class="bg-light">
+<body class="bg-black text-white">
   <div class="container mt-5">
+    <div class="text-center mb-4">
+      <video src="assets/videos/1NL.mp4" autoplay muted loop width="80" height="80" style="border-radius: 20px;"></video>
+    </div>
     <h2 class="text-center mb-4">Agregar o Editar Canción</h2>
-    <form id="formCancion">
+    <form id="formCancion" class="bg-dark p-4 rounded shadow border border-secondary">
       <input type="hidden" id="idCancion" />
       <div class="mb-3">
         <label for="titulo" class="form-label">Título</label>
-        <input type="text" class="form-control" id="titulo" required />
+        <input type="text" class="form-control bg-black text-white border-light" id="titulo" required />
       </div>
       <div class="mb-3">
         <label for="autor" class="form-label">Autor</label>
-        <input type="text" class="form-control" id="autor" />
+        <input type="text" class="form-control bg-black text-white border-light" id="autor" />
       </div>
       <div class="mb-3">
         <label for="genero" class="form-label">Género</label>
-        <input type="text" class="form-control" id="genero" />
+        <input type="text" class="form-control bg-black text-white border-light" id="genero" />
       </div>
       <div class="mb-3">
         <label for="letra" class="form-label">Letra</label>
-        <textarea class="form-control" id="letra" rows="6" required></textarea>
+        <textarea class="form-control bg-black text-white border-light" id="letra" rows="6" required></textarea>
       </div>
       <div class="mb-3">
         <label for="notas" class="form-label">Notas</label>
-        <textarea class="form-control" id="notas" rows="3"></textarea>
+        <textarea class="form-control bg-black text-white border-light" id="notas" rows="3"></textarea>
       </div>
       <div class="mb-3 form-check">
         <input type="checkbox" class="form-check-input" id="favorita" />
         <label for="favorita" class="form-check-label">Marcar como favorita</label>
       </div>
-      <button type="submit" class="btn btn-success">Guardar</button>
-      <a href="letras.html" class="btn btn-secondary">Regresar</a>
+      <button type="submit" class="btn btn-outline-light rounded-pill">Guardar</button>
+      <a href="letras.html" class="btn btn-outline-secondary rounded-pill">Regresar</a>
     </form>
   </div>
   <script type="module" src="js/firebase-config.js"></script>
