--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+<noscript><p class="text-white bg-dark p-3 text-center">Para continuar necesitas tener JavaScript habilitado.</p></noscript>
+<div id="mensajeDesktop" style="display:none; text-align:center; padding-top:20%; color:white; font-family:sans-serif; font-size:1.5rem;">
+  Cargando Corario 1NL<span class="loader-dots"><span>.</span><span>.</span><span>.</span></span>
+</div>
+
+<script>
+  
+  if (window.innerWidth > 768) {
+    document.getElementById("mensajeDesktop").style.display = "block";
+
+    window.location.href = "letras.html";
+  }
+</script>
+
   <div class="video-container">
     <video autoplay muted playsinline id="introVideo">
       <source src="assets/videos/Bienvenido.mp4" type="video/mp4">
